# midi-piano-rs

./: Cargo.toml  generate_midi_manifest.py
assets/: midi_manifest.json
assets/midi/JustPiano2-20160326/儿时回忆（41）/: When Christmas Comes To Town - Matthew Hall&Meagan Moore.mid  一个师傅仨徒弟 - 吸引力组合.mid  一分钱 - 潘振声.mid  上学歌 - 段福培.mid  世上只有妈妈好 - 萧芳芳.mid  两只老虎 - 马克修士.mid  卖报歌 - 聂耳.mid  听妈妈讲那过去的事情 - 瞿希贤.mid  啊，苏珊娜! - 斯蒂芬·福斯特.mid  外婆的澎湖湾 - 叶佳修.mid  大头儿子小头爸爸 - 邱悦.mid  大风车 - 乔羽.mid  小毛驴 - 林重冏.mid  小燕子 - 王丹凤.mid  我们是共产主义接班人 - 马思聪.mid  找朋友 - 林绿.mid  捉泥鳅 - 包美圣.mid  数鸭子 - 胡小环.mid  新年好 - 卓依婷.mid  春天在哪里 - 潘振声.mid  歌唱二小放牛郎 - 李劫夫.mid  歌声与微笑 - 谷建芬.mid  每当我走过老师窗前 - 董希哲.mid  洋娃娃之梦 - 奥斯丁.mid  洋娃娃和小熊跳舞 - 姆卡楚尔宾娜.mid  王老先生有块地 - 作者不详.mid  生日快乐 - 玛德里德·希尔.mid  粉刷匠 - 列申斯卡.mid  花仙子 - 孙佳星.mid  葫芦娃之歌 - 吴应炬.mid  蓝精灵之歌 - 郑秋枫.mid  让我们荡起双桨 - 乔羽.mid  采蘑菇的小姑娘 - 卓依婷.mid  铃儿响叮当 - 詹姆斯·罗德·皮尔彭特.mid  问候歌 - 曹骏.mid  鲁冰花 - 卓依婷.mid
assets/midi/JustPiano2-20160326/红色歌谣（52）/: 东方红 - 李有源.mid  人民海军向前进 - 绿克.mid  今天是你的生日，我的中国 - 韩静延.mid  军中绿花 - 小曾.mid  军港之夜 - 马金星.mid  北国之春 - 蒋大为.mid  喀秋莎 - 马特维·勃兰切尔.mid  团结就是力量 - 牧红.mid  国际歌 - 欧仁·鲍狄埃.mid  大海啊故乡 - 王立平.mid  学习雷锋好榜样 - 洪源.mid  山丹丹开花红艳艳 - 陕北民歌.mid  山楂树（苏联歌曲） - 皮里别科.mid  康美之恋 - 谭晶.mid  弹起我心爱的土琵琶 - 芦芒.mid  我爱你中国 - 郑秋枫.mid  我的中国心 - 张明敏.mid  打靶归来 - 王永泉.mid  春天的故事 - 董文华.mid  歌唱祖国 - 王莘.mid  没有共产党就没有新中国 - 曹火星.mid  浏阳河 - 徐叔华.mid  游击队之歌 - 贺绿汀.mid  社会主义好 - 希扬.mid  祖国不会忘记我 - 曹进.mid  神圣的战争 - 亚历山大·瓦西里耶维奇·亚历山德罗夫.mid  第三套全国中学生广播体操（舞动青春） - 教育部.mid  (+10 more)
data/: user_preferences.json
src/: app.rs  main.rs
src/devices/: mod.rs
src/midi/: library.rs  mod.rs  player.rs  sequence.rs  sink.rs
(+2077 files in other folders)
