[package]
name = "midi-piano-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
btleplug = "0.11.8"
env_logger = "0.11"
futures = "0.3"
iced = { version = "0.12", features = ["advanced", "wgpu", "tokio"] }
log = "0.4"
midly = "0.5"
midir = "0.10"
once_cell = "1"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
uuid = { version = "1", features = ["serde", "v4", "v5"] }
