[package]
name = "midi-piano-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
btleplug = "0.11.8"
env_logger = "0.11.8"
futures = "0.3.31"
iced = { version = "0.13.1", features = ["advanced", "wgpu", "tokio"] }
log = "0.4.28"
midly = "0.5.3"
midir = "0.10.2"
once_cell = "1.21.3"
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
uuid = { version = "1.18.1", features = ["serde", "v4", "v5"] }
rand = "0.9"
